Feat: Prettier, ESLint 초기 세팅

--- a/FE/reseng/src/App.css
+++ b/FE/reseng/src/App.css
@@ -12,7 +12,7 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #2EA642);
+  filter: drop-shadow(0 0 2em #2ea642);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -41,7 +41,6 @@
   color: #888;
 }
 
-
 /* 애니메이션 */
 /* 효과 : 서서히 나타나게 하는 효과 */
 /* 사용 페이지 : 첫번째 메인 페이지 글자 서서히 나타나게 함 */
@@ -57,7 +56,6 @@
     opacity: 1; /* 끝날 때 투명도 1 */
   }
 }
-
 
 /* 애니메이션 */
 /* 효과 : 아래에서 위로 나타나는 효과 */
@@ -76,7 +74,6 @@
     opacity: 1; /* 완전히 불투명 */
   }
 }
-
 
 .slide-in {
   animation: slideIn 0.5s ease-in-out; /* 애니메이션 적용 */
@@ -113,7 +110,11 @@
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0); /* 원래 위치 */
   }
   40% {
