--- a/FE/reseng/src/App.css
+++ b/FE/reseng/src/App.css
@@ -44,16 +44,68 @@
 /* 애니메이션 */
 /* 효과 : 서서히 나타나게 하는 효과 */
 /* 사용 페이지 : 첫번째 메인 페이지 글자 서서히 나타나게 함 */
+.fade-in2 {
+  animation: fadeIn2 2s ease-in-out; /* 애니메이션 적용 */
+}
+
+@keyframes fadeIn2 {
+  from {
+    opacity: 0; /* 시작 시 투명도 0 */
+    transform: translateY(20px); /* 처음에 약간 아래에서 시작 */
+  }
+  to {
+    opacity: 1; /* 끝날 때 투명도 1 */
+    transform: translateY(0); /* 제자리에 위치 */
+  }
+}
+
+/* .fade-down {
+  animation: fadeDown 2s ease-in-out;
+}
+
+@keyframes fadeDown {
+  from {
+    opacity: 1;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+} */
+
+/* 애니메이션 */
+/* 효과 : 이미지, 텍스트 확대 효과 */
+/* 사용 페이지 : 첫번째 메인 페이지 텍스트 마우스 오버 시 */
+.image-over {
+  transition: transform 0.5s ease-in-out;
+}
+
+.image-over:hover {
+  transform: scale(1.05);
+}
+
+.text-over {
+  transition: transform 0.5s ease-in-out;
+}
+
+.text-over:hover {
+  transform: scale(1.1);
+}
+
+/* 페이드 인 효과 */
 .fade-in {
-  animation: fadeIn 2.5s ease-in-out; /* 애니메이션 적용 */
+  animation: fadeIn 2s ease-in-out;
 }
 
 @keyframes fadeIn {
   from {
-    opacity: 0; /* 시작 시 투명도 0 */
+    opacity: 0;
+    transform: translateY(-20px);
   }
   to {
-    opacity: 1; /* 끝날 때 투명도 1 */
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
