--- a/FE/reseng/src/App.css
+++ b/FE/reseng/src/App.css
@@ -98,6 +98,18 @@
   animation: fadeIn 2s ease-in-out;
 }
 
+.fade-in-delay {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  animation-delay: 1s; /* 첫 번째 요소가 끝나고 난 후 시작 */
+}
+
+.fade-in-delay2 {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  animation-delay: 2s; /* 첫 번째 요소가 끝나고 난 후 시작 */
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
