Fix: 레이아웃 조정 및 속성 순서 변경

--- a/FE/reseng/src/App.css
+++ b/FE/reseng/src/App.css
@@ -18,6 +18,13 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+/* 검정색 테두리 제거 */
+input,
+textarea,
+select {
+  outline: none;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
