--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -53,9 +53,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+/* button:hover {
   border-color: #2ea642;
-}
+} */
 button:focus,
 button:focus-visible {
   outline: none;
