--- a/FE/src/App.css
+++ b/FE/src/App.css
@@ -390,14 +390,55 @@ select {
   }
 }
 
-.ql-align-center {
-  text-align: center;
+.parent-container {
+  width: 100%; /* 전체 너비 */
+  margin: 0 auto; /* 수평 중앙 정렬 */
+  text-align: initial; /* 기본 정렬: 왼쪽 */
 }
 
-.ql-align-right {
-  text-align: right;
+.parent-container img {
+  display: block; /* 블록 요소로 처리 */
+  max-width: 100%; /* 반응형 너비 */
+  margin: 0 auto; /* 기본 중앙 정렬 */
 }
 
 .ql-align-left {
-  text-align: left;
+  text-align: left !important;
+}
+
+.ql-align-center {
+  text-align: center !important;
+}
+
+.ql-align-right,
+.ql-align-end {
+  text-align: right !important;
+}
+
+.ql-align-justify {
+  text-align: justify !important;
+}
+
+.ql-editor img {
+  display: block;
+  margin: 0 auto;
+}
+
+.ql-align-left img {
+  margin: 0;
+}
+
+.ql-align-right img {
+  margin: 0 0 0 auto;
+}
+
+.ql-editor {
+  max-width: 100%;
+  word-wrap: break-word;
+}
+
+.w-full {
+  display: block;
+  width: 100%;
+  max-width: 100%;
 }
